Added the comments and heading to the projects

--- a/MNIST Digit Classification.ipynb
+++ b/MNIST Digit Classification.ipynb
@@ -205,7 +205,12 @@
    "metadata": {},
    "source": [
     "## Buliding neural network\n",
-    " We will build the neural network using Sequential and Dense function of the tensorflow."
+    " We will build the neural network using Sequential and Dense function of the tensorflow.\n",
+    "### Softmax placement \n",
+    "Numerical stability is improved if the softmax is grouped with the loss function rather than the output layer during training. This has implications when building the model and using the model Building:\n",
+    "- The final Dense layer should use a 'linear activation'. This is effectively no activation\n",
+    "- The **model.compile** statement will indicates this is by including **from_logits = True**\n",
+    "- This does not impact the form of the target. In the case of SparseCategorialCrossentropy, the target is the expected digit, 0-9."
    ]
   },
   {
@@ -222,6 +227,14 @@
     "    tf.keras.layers.Dense(50, activation = \"relu\", name=\"L2\"),\n",
     "    tf.keras.layers.Dense(10, activation = \"sigmoid\", name=\"L3\")\n",
     "])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edcba820",
+   "metadata": {},
+   "source": [
+    "Summary of the tensorflow "
    ]
   },
   {
@@ -259,6 +272,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ef6df29",
+   "metadata": {},
+   "source": [
+    "The following code\n",
+    "- A loss function, **SparseCategoricalCrossentropy** and indicates the softmax should be included with the loss calculation by adding **from_logits = True**\n",
+    "- Optimizer :- **Adaptive Moment** (Adam)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "id": "94db58f3",
@@ -271,6 +294,14 @@
     "    metrics = ['accuracy']\n",
     ")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5320ce5f",
+   "metadata": {},
+   "source": [
+    "Fitting the model into the dataset for the training purpose"
    ]
   },
   {
@@ -318,6 +349,14 @@
    ],
    "source": [
     "model.fit(train_X,train_y,epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b3bf045",
+   "metadata": {},
+   "source": [
+    "Prediction of the accuracy of the model on the test datasets"
    ]
   },
   {
@@ -399,6 +438,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07a6808a",
+   "metadata": {},
+   "source": [
+    "## Prediction\n",
+    "- Making prediction using the test datatsets and using the **np.argmax(i)** this will pick the highest probablity and display that number according to the model.\n",
+    "- **model.predict** gives prediction probability of the each class for the data points"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "id": "f62c29f2",
@@ -454,6 +503,14 @@
    "source": [
     "label_of_first_image = np.argmax(y_pred[0])\n",
     "print(label_of_first_image)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1d231b3",
+   "metadata": {},
+   "source": [
+    "## Converting the Prediction Probabilty to class label"
    ]
   },
   {
@@ -1479,6 +1536,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d20ef531",
+   "metadata": {},
+   "source": [
+    "## Y_test -> True Labels\n",
+    "## Y_pred_labels -> Predicted Labels"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "id": "71409ebd",
@@ -1500,6 +1566,15 @@
    ],
    "source": [
     "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a179b4",
+   "metadata": {},
+   "source": [
+    "### Confusion Matrix\n",
+    "This is used for the accuracy of the test datasets"
    ]
   },
   {
@@ -1529,6 +1604,14 @@
    "source": [
     "conf_mat = confusion_matrix(test_y,Y_pred_Labels)\n",
     "print(conf_mat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5599f44",
+   "metadata": {},
+   "source": [
+    "Seaborn is used for the heat maps and to show the accuracy of the test datasets"
    ]
   },
   {
